--- a/_config.yml
+++ b/_config.yml
@@ -28,9 +28,9 @@ title_separator          : "-"
 subtitle                 : "Location Privacy Protection"
 name                     : "jwentong"
 description              : "An amazing website."
-url                      : "https://271828mmhui.github.io/" # protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://mhuimin.github.io/" # protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : 271828mmhui/271828mmhui.github.io #e.g. "mmistakes/minimal-mistakes"
+repository               : mhuimin/mhuimin.github.io #e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : "/assets/images/Favicon.png" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
@@ -113,9 +113,9 @@ analytics:
 author:
   name             : "Dr. Minghui Min"
   avatar           : "/assets/images/Minghui01.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "School of Informatics, Xiamen University"
-  email            : "eejwentong@ust.hk"
-  location         : "Room 3112A, Acdemic Building, HKUST, Clear Water Bay, Kowloon, Hong Kong"
+  bio              : "School of Information and Control Engineering, China University of Mining and Technology"
+  email            : "minmh@cmut.edu.cn"
+  location         : "Room B424, Information and Control Building, CUMT, Xuzhou, Jiangsu, China"
   links:
    # - label: "Email"
     #  icon: "fas fa-fw fa-envelope-square"
