--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ locale                   : "en-US"
 title                    : "Minghui Min's Homepage"
 title_separator          : "-"
 subtitle                 : "Location Privacy Protection"
-name                     : "jwentong"
+name                     : "MinghuiMin"
 description              : "An amazing website."
 url                      : "https://mhuimin.github.io/" # protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
