--- a/_config.yml
+++ b/_config.yml
@@ -122,7 +122,7 @@ author:
       #url: "eejwentong@ust.hk"
     - label: "Research Group"
       icon: "fas fa-fw fa-link"
-      url: "https://eejzhang.people.ust.hk/group.html"
+      url: "http://faculty.cumt.edu.cn/MMH/zh_CN/index.htm"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       # url: "https://twitter.com/"
