--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,8 +6,8 @@ main:
     url: /service/ 
   - title: "Honor"
     url: /honor/ 
-  - title: "MAB"
-    url: /mab/ 
+  - title: "Privacy"
+    url: /privacy/ 
   - title: "Google Scholar"
     url: https://scholar.google.com/citations?user=oqEBaUcAAAAJ&hl=en
 
